# BuildMeAPC

./: .dockerignore  BuildMeAPC.sln  Dockerfile.api  LICENSE  README-DOCKER.md  README.md  all_pc_parts.sql  docker-compose.yml  init_app_tables.sql  package-lock.json  package.json  pc_parts_data.sql
WebScraper/: .dockerignore  Dockerfile  README.md  main.py  parse.py  promote_admin.py  pyproject.toml  requirements.txt  scrape.py  scraper.py
WebScraper/ai/: case_brands.py  case_normalization.py  case_parser.py  cooler_brands.py  cooler_normalization.py  cooler_parser.py  cpu_parser.py  gpu_parser.py  llm_utils.py  loader.py  motherboard_parser.py  prompts.py  psu_brands.py  psu_normalization.py  psu_parser.py  ram_parser.py  ssd_parser.py
WebScraper/database/: engine.py  session.py
WebScraper/models/: case.py  cooler.py  cpu.py  gpu.py  motherboard.py  psu.py  ram.py  ssd.py
WebScraper/pipelines/: case_pipeline.py  cooler_pipeline.py  cpu_pipeline.py  gpu_pipeline.py  motherboard_pipeline.py  psu_pipeline.py  ram_pipeline.py  ssd_pipeline.py
WebScraper/scripts/: init_db.py  migrate_add_cases_table.py  migrate_add_coolers_table.py  migrate_add_cpu_memory_type.py  migrate_add_cpus_table.py  migrate_add_gpus_table.py  migrate_add_motherboards_table.py  migrate_add_psus_table.py  migrate_add_rams_table.py  migrate_add_ssds_table.py  migrate_drop_psu_fields.py  run_case_scraper.py  run_cooler_scraper.py  run_cpu_scraper.py  run_gpu_scraper.py  run_motherboard_scraper.py  run_psu_scraper.py  run_ram_scraper.py  run_ssd_scraper.py
WebScraper/tests/: test_llm_utils.py  (+10 more)
(+96 files in other folders)
