[project]
name = "webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html5lib>=1.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.9",
    "llama-cpp-python>=0.3.21",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.11.9",
    "pytest-playwright>=0.7.1",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
    "streamlit>=1.50.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
